Fix inconsistencies in Policy Response data, filter on dimension ga:pagePat was too restrictive: oecd.org/* was accepted but not www.oecd.org/*. (fixed  #27117)

--- a/ReadTracking/ressources/GAsettings.json
+++ b/ReadTracking/ressources/GAsettings.json
@@ -19,7 +19,7 @@
               "dimensionName": "ga:pagePath",
               "operator": "REGEXP",
               "expressions": [
-                "read.oecd-ilibrary.org\/"
+                "(?:www.)?read.oecd-ilibrary.org\/"
               ],
               "caseSensitive": false
             }
