--- a/TestApp/ressources/GAsettings.json
+++ b/TestApp/ressources/GAsettings.json
@@ -25,7 +25,7 @@
               "dimensionName": "ga:pagePath",
               "operator": "REGEXP",
               "expressions": [
-                "read.oecd-ilibrary.org\/"
+                "(?:www.)?read.oecd-ilibrary.org\/"
               ],
               "caseSensitive": false
             }
