--- a/PolicyResponsesTracking/ressources/GAsettings.json
+++ b/PolicyResponsesTracking/ressources/GAsettings.json
@@ -19,7 +19,7 @@
               "dimensionName": "ga:pagePath",
               "operator": "REGEXP",
               "expressions": [
-                "read.oecd-ilibrary.org\/view\/\\?ref="
+                "(?:www.)?read.oecd-ilibrary.org\/view\/\\?ref="
               ],
               "caseSensitive": false
             },
@@ -27,7 +27,7 @@
               "dimensionName": "ga:pagePath",
               "operator": "REGEXP",
               "expressions": [
-                "oecd.org\/coronavirus\/policy-responses\/"
+                "(?:www.)?oecd.org\/coronavirus\/policy-responses\/"
               ],
               "caseSensitive": false
             }
