--- a/PolicyResponsesTracking/PolicyResponsesTracking.csproj
+++ b/PolicyResponsesTracking/PolicyResponsesTracking.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.95.4" />
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
   </ItemGroup>
