--- a/ReadTracking/ReadTracking.csproj
+++ b/ReadTracking/ReadTracking.csproj
@@ -24,6 +24,7 @@
     </PropertyGroup>-->
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
   </ItemGroup>
