Update root url for kappav3 api

--- a/PolicyResponsesTracking/appsettings.Production.json
+++ b/PolicyResponsesTracking/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
   "applicationName": "Policy Responses Tracking",
   "ConfigurationServiceAPIEndpoint": "PolicyResponsesTracking/production/",
-  "kappaMiddlewareAddress": "https://kappa.oecd.org/v3-api/api/"
+  "kappaMiddlewareAddress": "https://kappa.oecd.org/catalogue/service/api/"
 }
