--- a/ReadTracking/appsettings.Production.json
+++ b/ReadTracking/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
   "applicationName": "Read service tracking",
   "ConfigurationServiceAPIEndpoint": "ReadTracking/production/",
-  "kappaMiddlewareAddress": "https://kappa.oecd.org/v3-api/api/"
+  "kappaMiddlewareAddress": "https://kappa.oecd.org/catalogue/service/api/"
 }
