--- a/ReadTracking/appsettings.Development.json
+++ b/ReadTracking/appsettings.Development.json
@@ -1,5 +1,5 @@
 {
   "applicationName": "Read service tracking test",
   "ConfigurationServiceAPIEndpoint": "ReadTracking/development/",
-  "kappaMiddlewareAddress": "https://kappa.oecd.org/v3-api/api/"
+  "kappaMiddlewareAddress": "https://kappa.oecd.org/catalogue/service/api/"
 }
